# GreenSense-V2-Fleet-Environment-Monitoring-System

./: CMakeLists.txt  LICENSE  README.md
main/: CMakeLists.txt  GreenSense-V2-Fleet-Environment-Monitoring-System.c  dashboard-server.c  dashboard-server.h
